alignment on about page fixed

--- a/cfg-team3/src/pages/articles/articleCard.css
+++ b/cfg-team3/src/pages/articles/articleCard.css
@@ -7,7 +7,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
     border-radius: 10px;
     transition: transform 0.5s cubic-bezier(0.34, 1.56, 0.64, 1);
 }
@@ -22,7 +21,7 @@
 }
 
 /* Aligns items vertically to the left of the card */
-.verticalBundle {
+.articleInfo {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
